--- a/UKDrivingTestSimulator.html
+++ b/UKDrivingTestSimulator.html
@@ -4,27 +4,25 @@ title: UK Driving Test Simulator
 background: grey
 ---
 
-
-<!-- assign project where path is UDTSDetails.md -->
+<!-- Assign project where path is UDTSDetails.md -->
 {% assign project = site.page | where: "path", "_page/UDTSDetails.md" | first %}
-
 
 <section class="page-section">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">Submit Interest</h2>
+        <h2 class="section-heading text-uppercase">Prepare for your test with UDTS</h2>
         <h3 class="section-subheading text-muted">
-          Join the e-mail list now to hear first about development progress!
+          The First VR Simulator Built Around Fully Implemented UK Highway Code
         </h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-left">
         <!-- Include Markdown content -->
         <div>
           <p>{{ project.content | markdownify }}</p>
-          </div>
+        </div>
       </div>
     </div>
   </div>
